log/build_2021-05-30_00-43-26/sim_pkg/stdout_stderr.log
[35m[1mScanning dependencies of target plat1_send_vel_node[0m
[ 50%] [32mBuilding CXX object CMakeFiles/plat1_send_vel_node.dir/src/plat1_send_vel_node.cpp.o[0m
/home/javierfr/Tesis_ws/V1/src/sim_pkg/src/plat1_send_vel_node.cpp:10:27: error: ‘std’ in namespace ‘rclcpp’ does not name a type
   10 | void setvel(const rclcpp::std::shared_ptr<interfaces::srv::Platform1Vel::Request> request,
      |                           ^~~
/home/javierfr/Tesis_ws/V1/src/sim_pkg/src/plat1_send_vel_node.cpp:10:42: error: expected unqualified-id before ‘<’ token
   10 | void setvel(const rclcpp::std::shared_ptr<interfaces::srv::Platform1Vel::Request> request,
      |                                          ^
/home/javierfr/Tesis_ws/V1/src/sim_pkg/src/plat1_send_vel_node.cpp:10:42: error: expected ‘)’ before ‘<’ token
   10 | void setvel(const rclcpp::std::shared_ptr<interfaces::srv::Platform1Vel::Request> request,
      |            ~                             ^
      |                                          )
/home/javierfr/Tesis_ws/V1/src/sim_pkg/src/plat1_send_vel_node.cpp:10:42: error: expected initializer before ‘<’ token
/home/javierfr/Tesis_ws/V1/src/sim_pkg/src/plat1_send_vel_node.cpp: In function ‘int main(int, char**)’:
/home/javierfr/Tesis_ws/V1/src/sim_pkg/src/plat1_send_vel_node.cpp:24:11: error: ‘rclcpp::std’ has not been declared
   24 |   rclcpp::std::shared_ptr<rclcpp::Node> node = rclcpp::Node::make_shared("plat1_send_vel_node");
      |           ^~~
/home/javierfr/Tesis_ws/V1/src/sim_pkg/src/plat1_send_vel_node.cpp:24:39: error: expected primary-expression before ‘>’ token
   24 |   rclcpp::std::shared_ptr<rclcpp::Node> node = rclcpp::Node::make_shared("plat1_send_vel_node");
      |                                       ^
/home/javierfr/Tesis_ws/V1/src/sim_pkg/src/plat1_send_vel_node.cpp:24:41: error: ‘node’ was not declared in this scope
   24 |   rclcpp::std::shared_ptr<rclcpp::Node> node = rclcpp::Node::make_shared("plat1_send_vel_node");
      |                                         ^~~~
/home/javierfr/Tesis_ws/V1/src/sim_pkg/src/plat1_send_vel_node.cpp:27:55: error: expected primary-expression before ‘>’ token
   27 |     node->create_service<interfaces::srv::Platform1Vel>("platform1_vel",  &setvel);
      |                                                       ^
/home/javierfr/Tesis_ws/V1/src/sim_pkg/src/plat1_send_vel_node.cpp:27:76: error: ‘setvel’ was not declared in this scope
   27 |     node->create_service<interfaces::srv::Platform1Vel>("platform1_vel",  &setvel);
      |                                                                            ^~~~~~
make[2]: *** [CMakeFiles/plat1_send_vel_node.dir/build.make:63: CMakeFiles/plat1_send_vel_node.dir/src/plat1_send_vel_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:78: CMakeFiles/plat1_send_vel_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
